--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "prunk": "~1.2.1",
     "jsdom": "~3.1.2",
     "q": "~1.4.1",
-    "chai": "~3.5.0"
+    "chai": "~3.5.0",
+    "jshint-stylish": "~2.2.0",
+    "grunt-contrib-jshint": "~1.0.0"
   },
   "dependencies": {
     "babel-plugin-transform-es2015-for-of": "^6.6.0",
