--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grafana-sunandmoon-datasource",
+  "name": "sunandmoon-datasource",
   "private": true,
   "version": "0.1.0",
   "description": "",
