--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "watch": "webpack --config webpack.config.js --watch",
-    "lint": "tslint src/**/*.ts",
+    "lint": "tslint src/**/*.ts spec/**/*.ts",
+    "test": "jest --config jest.config.js",
     "markdownlint": "markdownlint *.md dev-env/*.md"
   },
   "repository": {
@@ -25,10 +26,13 @@
   },
   "devDependencies": {
     "@types/grafana": "https://git@github.com/briangann/types-grafana.git",
+    "@types/jest": "~24.0.10",
     "@types/suncalc": "~1.8.0",
     "clean-webpack-plugin": "~2.0.0",
     "copy-webpack-plugin": "~5.0.0",
     "grafana-sdk-mocks": "github:grafana/grafana-sdk-mocks",
+    "jest": "^24.3.1",
+    "jest-junit": "^6.3.0",
     "markdownlint": "~0.12.0",
     "markdownlint-cli": "~0.14.0",
     "q": "~1.5.1",
