project: Fix GitLab CI when using Docker executor

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,10 @@
-image: node:4.2.6
-
-all_tests:
-  script:
+test:
+  image: node:4.2.6
+  before_script:
     - npm install
+    - npm install -g grunt-cli
+  script:
     - grunt test
+  cache:
+    paths:
+      - node_modules
