--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sunandmoon-datasource",
   "private": true,
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -21,32 +21,23 @@
     "url": "https://github.com/fetzerch/grafana-sunandmoon-datasource/issues"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "babel": "~6.5.1",
-    "grunt-babel": "~6.0.0",
-    "grunt-contrib-copy": "~0.8.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-uglify": "~0.11.0",
-    "grunt-mocha-test": "~0.12.7",
-    "grunt-systemjs-builder": "^0.2.5",
-    "load-grunt-tasks": "~3.2.0",
-    "grunt-execute": "~0.2.2",
-    "grunt-contrib-clean": "~0.6.0",
-    "prunk": "~1.2.1",
-    "jsdom": "~3.1.2",
-    "q": "~1.4.1",
-    "chai": "~3.5.0",
-    "jshint-stylish": "~2.2.0",
-    "grunt-contrib-jshint": "~1.0.0",
-    "markdownlint": "0.1.1"
+    "@babel/core": "~7.3.3",
+    "@babel/plugin-transform-modules-systemjs": "~7.2.0",
+    "@babel/preset-env": "~7.3.1",
+    "grunt": "~1.0.3",
+    "grunt-babel": "~8.0.0",
+    "grunt-contrib-clean": "~2.0.0",
+    "grunt-contrib-copy": "~1.0.0",
+    "grunt-contrib-jshint": "~2.0.0",
+    "grunt-contrib-watch": "~1.1.0",
+    "grunt-mocha-test": "~0.13.3",
+    "load-grunt-tasks": "~4.0.0",
+    "markdownlint": "~0.12.0",
+    "mocha": "~6.0.1"
   },
   "dependencies": {
-    "babel-plugin-transform-es2015-for-of": "^6.6.0",
-    "babel-plugin-transform-es2015-modules-systemjs": "^6.5.0",
-    "babel-preset-es2015": "^6.5.0",
-    "lodash": "~4.0.0",
-    "mocha": "^2.4.5",
-    "suncalc": "~1.7.0"
+    "lodash": "^4.17.11",
+    "suncalc": "^1.8.0"
   },
   "homepage": "https://github.com/fetzerch/grafana-sunandmoon-datasource"
 }
