project: Validate with ESLint

--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@babel/core": "~7.3.3",
     "@babel/plugin-transform-modules-systemjs": "~7.2.0",
     "@babel/preset-env": "~7.3.1",
+    "eslint": "^5.14.1",
     "grunt": "~1.0.3",
     "grunt-babel": "~8.0.0",
     "grunt-contrib-clean": "~2.0.0",
     "grunt-contrib-copy": "~1.0.0",
     "grunt-contrib-jshint": "~2.0.0",
     "grunt-contrib-watch": "~1.1.0",
+    "grunt-eslint": "21.0.0",
     "grunt-mocha-test": "~0.13.3",
     "load-grunt-tasks": "~4.0.0",
     "markdownlint": "~0.12.0",
