--- a/dev-env/datasource.yml
+++ b/dev-env/datasource.yml
@@ -1,13 +1,9 @@
 apiVersion: 1
 
 datasources:
-# Provisioning the datasource is currently broken.
-# See: https://github.com/grafana/grafana/issues/11537
-# - name: sunandmoon
-#   type: fetzerch-sunandmoon-datasource
-#   jsonData:
-#     # Error: "Service init failed: Datasource provisioning error: json: unsupported type: map[interface {}]interface {}"
-#     # position:
-#     #  latitude: 48.0
-#     #  longitude: 10.0
-#   editable: true
+ - name: sunandmoon
+   type: fetzerch-sunandmoon-datasource
+   jsonData:
+     latitude: 48.0
+     longitude: 10.0
+   editable: true
