--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: node_js
 node_js:
   - "8"
-cache:
-  directories:
-    - $HOME/.npm
 before_script:
-  - npm install -g grunt-cli
+  - yarn install
 script:
-  - grunt test
+  - yarn build
+  - yarn lint
+  - yarn markdownlint
+cache:
+  - npm
+  - yarn
