--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,19 @@
 test:
   image: node:11
   before_script:
-    - yarn config set cache-folder "$(pwd)/.yarn"
-    - yarn install
+    - npm config set cache "$(pwd)/.npm"
+    - npm install
   script:
-    - yarn build
-    - yarn lint
-    - yarn test
-    - yarn markdownlint
+    - npm run build
+    - npm run lint
+    - npm run test
+    - npm run markdownlint
     # Make sure build output has been committed.
     - git status --porcelain || (echo "Repo is dirty"; git diff; false)
   cache:
     paths:
       - node_modules
-      - .yarn
+      - .npm
   coverage: '/All files[^|]*\|[^|]*\s+([\d\.]+)/'
   artifacts:
     reports:
