--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,16 @@ language: node_js
 node_js:
   - "8"
 before_script:
-  - yarn install
+  - npm install
 script:
-  - yarn build
-  - yarn lint
-  - yarn test
-  - yarn markdownlint
+  - npm run build
+  - npm run lint
+  - npm run test
+  - npm run markdownlint
   # Make sure build output has been committed.
   - git status --porcelain || (echo "Repo is dirty"; git diff; false)
 after_success:
-  - yarn add coveralls
+  - npm add coveralls
   - cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js
 cache:
   - npm
-  - yarn
