--- a/dev-env/docker-compose.yml
+++ b/dev-env/docker-compose.yml
@@ -13,13 +13,14 @@ services:
         - "GF_AUTH_ANONYMOUS_ORG_ROLE=Admin"
         # Install additional plugins.
         # - GF_INSTALL_PLUGINS=fetzerch-sunandmoon-datasource
+        - "GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS=fetzerch-sunandmoon-datasource"
     ports:
       - "3000:3000"
     volumes:
       # Persist Grafana settings.
       - "./data:/var/lib/grafana"
       # Make the sunandmoon plugin available.
-      - "../:/var/lib/grafana/plugins/grafana-sunandmoon-datasource"
+      - "../:/var/lib/grafana/plugins/fetzerch-sunandmoon-datasource"
       # Provision a sunandmoon datasource.
       - "./datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml"
       # Provision a sunandmoon dashboard.
