--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "grafana-toolkit plugin:test",
     "dev": "grafana-toolkit plugin:dev",
     "watch": "grafana-toolkit plugin:dev --watch",
+    "sign": "grafana-toolkit plugin:sign",
     "markdownlint": "markdownlint *.md dev-env/*.md"
   },
   "repository": {
@@ -29,26 +30,27 @@
     ]
   },
   "devDependencies": {
-    "@grafana/data": "^7.3.4",
-    "@grafana/runtime": "^7.3.4",
-    "@grafana/toolkit": "^7.3.4",
-    "@grafana/ui": "^7.3.4",
-    "@testing-library/jest-dom": "5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@types/enzyme": "^3.10.8",
-    "@types/lodash": "latest",
-    "@types/suncalc": "~1.8.0",
-    "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.5",
-    "enzyme-to-json": "3.6.1",
-    "markdownlint": "~0.22.0",
-    "markdownlint-cli": "~0.25.0"
+    "@grafana/data": "8.0.2",
+    "@grafana/runtime": "8.0.2",
+    "@grafana/toolkit": "8.0.2",
+    "@grafana/ui": "8.0.2",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@types/enzyme": "^3.10.9",
+    "@types/lodash": "^4.14.0",
+    "@types/suncalc": "^1.8.1",
+    "@emotion/core": "^10.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
+    "markdownlint": "^0.23.1",
+    "markdownlint-cli": "^0.28.1"
   },
   "dependencies": {
     "suncalc": "^1.8.0"
   },
   "engines": {
-    "node": ">=12 <13"
+    "node": ">=12"
   },
   "homepage": "https://github.com/fetzerch/grafana-sunandmoon-datasource"
 }
