--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "sunandmoon-datasource",
   "private": true,
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "Calculates position of Sun and Moon.",
   "scripts": {
     "build": "grafana-toolkit plugin:build",
     "test": "grafana-toolkit plugin:test",
+    "coverage": "grafana-toolkit plugin:test --coverage",
     "dev": "grafana-toolkit plugin:dev",
     "watch": "grafana-toolkit plugin:dev --watch",
     "sign": "grafana-toolkit plugin:sign",
