--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "version": "0.3.0",
   "description": "Calculates position of Sun and Moon.",
   "scripts": {
-    "build": "grafana-toolkit plugin:build",
-    "test": "grafana-toolkit plugin:test",
-    "coverage": "grafana-toolkit plugin:test --coverage",
-    "dev": "grafana-toolkit plugin:dev",
-    "watch": "grafana-toolkit plugin:dev --watch",
-    "sign": "grafana-toolkit plugin:sign",
+    "build": "webpack -c ./.config/webpack/webpack.config.ts --env production",
+    "dev": "webpack -w -c ./.config/webpack/webpack.config.ts --env development",
+    "lint": "eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx .",
+    "lint:fix": "npm run lint -- --fix",
+    "markdownlint": "markdownlint *.md dev-env/*.md",
+    "server": "docker-compose up --build",
+    "sign": "npx --yes @grafana/sign-plugin@latest",
     "start": "yarn watch",
-    "markdownlint": "markdownlint *.md dev-env/*.md"
+    "test": "jest --watch --onlyChanged",
+    "test:ci": "jest --passWithNoTests --maxWorkers 4",
+    "typecheck": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -27,24 +30,62 @@
     "url": "https://github.com/fetzerch/grafana-sunandmoon-datasource/issues"
   },
   "devDependencies": {
-    "@grafana/runtime": "9.2.3",
-    "@grafana/toolkit": "9.2.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@types/lodash": "^4.14.188",
+    "@babel/core": "^7.21.4",
+    "@grafana/eslint-config": "^7.0.0",
+    "@grafana/tsconfig": "^1.2.0-rc1",
+    "@swc/core": "^1.3.90",
+    "@swc/helpers": "^0.5.0",
+    "@swc/jest": "^0.2.26",
+    "@testing-library/jest-dom": "6.1.4",
+    "@testing-library/react": "14.0.0",
+    "@types/jest": "^29.5.0",
+    "@types/lodash": "^4.14.194",
+    "@types/node": "^20.8.7",
+    "@types/react-router-dom": "^5.2.0",
     "@types/suncalc": "^1.8.1",
+    "@types/testing-library__jest-dom": "5.14.8",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.3",
+    "eslint-plugin-deprecation": "^2.0.0",
+    "eslint-plugin-jsdoc": "^48.2.9",
+    "eslint-plugin-react": "^7.34.2",
+    "eslint-webpack-plugin": "^4.0.1",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
+    "glob": "^10.2.7",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "markdownlint": "^0.26.2",
-    "markdownlint-cli": "^0.32.2"
+    "markdownlint-cli": "^0.32.2",
+    "prettier": "^2.8.7",
+    "react-select-event": "^5.5.1",
+    "replace-in-file-webpack-plugin": "^1.0.6",
+    "sass": "1.63.2",
+    "sass-loader": "13.3.1",
+    "style-loader": "3.3.3",
+    "swc-loader": "^0.2.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "4.8.4",
+    "webpack": "^5.86.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-livereload-plugin": "^3.0.2"
   },
   "dependencies": {
-    "@grafana/data": "9.2.3",
-    "@grafana/ui": "9.2.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "suncalc": "^1.9.0"
+    "@emotion/css": "11.10.6",
+    "@grafana/data": "10.3.3",
+    "@grafana/runtime": "10.3.3",
+    "@grafana/schema": "10.3.3",
+    "@grafana/ui": "10.3.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "suncalc": "^1.9.0",
+    "tslib": "2.5.3"
   },
   "engines": {
     "node": ">=14"
   },
-  "homepage": "https://github.com/fetzerch/grafana-sunandmoon-datasource"
+  "homepage": "https://github.com/fetzerch/grafana-sunandmoon-datasource",
+  "packageManager": "npm@10.7.0"
 }
