--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,8 @@ jobs:
         run: npm run test:ci
       - name: Build frontend
         run: npm run build
+      - name: Run markdownlint
+        run: npm run markdownlint
 
       - name: Check for backend
         id: check-for-backend
