project: Run npx @grafana/create-plugin@latest update

--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -4,6 +4,7 @@ ARG grafana_image=grafana-enterprise
 FROM grafana/${grafana_image}:${grafana_version}
 
 ARG development=false
+ARG TARGETARCH
 
 
 ENV DEV "${development}"
